--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "foundation-sites": "~6.1.0",
-    "motion-ui": "~1.1.0"
+    "motion-ui": "~1.1.0",
+    "foundation-apps": "^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
