added more images

--- a/.ftpconfig
+++ b/.ftpconfig
@@ -5,7 +5,7 @@
     "user": "bb@bytesandbinaries.com",
     "pass": "bububaba2016",
     "promptForPass": false,
-    "remote": "/",
+    "remote": "/minimiefb",
     "secure": false,
     "secureOptions": null,
     "connTimeout": 10000,
