--- a/.ftpconfig
+++ b/.ftpconfig
@@ -3,7 +3,7 @@
     "host": "ftp.bytesandbinaries.com",
     "port": 21,
     "user": "bb@bytesandbinaries.com",
-    "pass": "bububaba2016",
+    "pass": "BUBUBABA2016!",
     "promptForPass": false,
     "remote": "/minimiefb",
     "secure": false,
